clusters/grv-use1/default/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplemultiarchapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: simplemultiarchapp
  template:
    metadata:
      labels:
        app: simplemultiarchapp
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: karpenter.sh/provisioner-name
                operator: In
                values:
                - tlvsummit23amd 
                - tlvsummit23arm 
      #tolerations:
      #- key: dedicated
      #  operator: Equal
      #  value: simplemultiarchapp
      #  effect: NoSchedule 
      #nodeSelector:
      #  karpenter.sh/provisioner-name: tlvsummit23amd
      serviceAccountName: appsimulator
      containers:
      - name: app
        image: 907513986313.dkr.ecr.us-west-2.amazonaws.com/simplemultiarchimage:multiarch-py3
        imagePullPolicy: Always
        command: ["/usr/src/app/start.sh"]
        resources:
          requests:
            cpu: 2
            #memory: "512Mi"
          limits:
            cpu: 2
            #memory: "512Mi"
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /app/health/
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /app/health/
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
