clusters/grv-use1/default/apploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apploader
  name: apploader
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: apploader
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apploader
    spec:
      containers:
      - command:
        - /usr/src/app/app-loader.sh
        image: 907513986313.dkr.ecr.us-west-2.amazonaws.com/simplemultiarchimage:multiarch-py3
        imagePullPolicy: Always
        name: apploader
      serviceAccount: appsimulator
      serviceAccountName: appsimulator
      terminationGracePeriodSeconds: 30
