clusters/grv-use1/default/loadsimu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loadsimu
  name: loadsimu
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadsimu
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: loadsimu
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: karpenter.sh/provisioner-name
                operator: In
                values:
                - tlvsummit23loader
      tolerations:
      - key: dedicated
        operator: Equal
        value: tlvsummit23loader
        effect: NoSchedule
      #nodeSelector:
      #  eks.amazonaws.com/nodegroup: grv-use1-ng
      containers:
      - command:
        - /usr/src/app/appsimulator.sh
        image: 907513986313.dkr.ecr.us-west-2.amazonaws.com/simplemultiarchimage:multiarch-py3
        imagePullPolicy: Always
        name: loadsimu
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: appsimulator
      serviceAccountName: appsimulator
      terminationGracePeriodSeconds: 30
