clusters/grv-use1/default/app-svc-ingress-weighted-routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: armsimplemultiarchapp-svc
spec:
  selector:
    app: armsimplemultiarchapp
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: amdsimplemultiarchapp-svc
spec:
  selector:
    app: amdsimplemultiarchapp
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplemultiarchapp-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /app/health/
    alb.ingress.kubernetes.io/success-codes: '200-301'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:907513986313:certificate/3207bc24-aca1-4efd-89c6-3af81e0d35b7
    alb.ingress.kubernetes.io/load-balancer-name: simplemultiarchapp
    alb.ingress.kubernetes.io/group.name: simplemultiarchapp
    alb.ingress.kubernetes.io/actions.weighted-routing: '{"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"armsimplemultiarchapp-svc","servicePort":"80","weight":0},{"serviceName":"amdsimplemultiarchapp-svc","servicePort":"80","weight":100}]}}'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weighted-routing
                port:
                  name: use-annotation
